XMLHttpRequestMainThread.cpp:3050:22: error: MakeScopeExit was not declared in this scope
Categories
(Core :: DOM: Networking, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox88 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | unaffected |
firefox91 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: gaston)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0
Steps to reproduce:
Build on platforms without profiler fails again with:
11:25.59 In file included from Unified_cpp_dom_xhr0.cpp:20:
11:25.59 /builds/psumbera/mozilla-central-build/dom/xhr/XMLHttpRequestMainThread.cpp: In member function void mozilla::dom::XMLHttpRequestMainThread::SendInternal(const moz illa::dom::BodyExtractorBase*, bool, mozilla::ErrorResult&):
11:25.59 /builds/psumbera/mozilla-central-build/dom/xhr/XMLHttpRequestMainThread.cpp:3050:22: error: MakeScopeExit was not declared in this scope; did you mean scopeExit
?
11:25.59 3050 | auto scopeExit = MakeScopeExit([&] {
11:25.59 | ^~~~~~~~~~~~~
11:25.59 | scopeExit
This is probably regression after: Bug 1712930.
Reporter | ||
Comment 1•4 years ago
|
||
Mike, please, is there any chance how to avoid these?
Updated•4 years ago
|
Comment 2•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::XPCOM' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Assignee | ||
Comment 3•4 years ago
|
||
btw https://phabricator.services.mozilla.com/D116560 will fix this one, dunno how one can change the bug number on an existing review..
Comment 4•4 years ago
|
||
(In reply to Landry Breuil (:gaston) from comment #3)
btw https://phabricator.services.mozilla.com/D116560 will fix this one, dunno how one can change the bug number on an existing review..
You can change the bug number in the commit message locally and re-submit to phabricator again, it will link to the new bug automatically.
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 5•4 years ago
|
||
Fixes build failure on Tier3:
src/m-c/dom/xhr/XMLHttpRequestMainThread.cpp:3050:22: error: use of undeclared identifier 'MakeScopeExit'
auto scopeExit = MakeScopeExit([&] {
regressed by bug 1712930
Comment 7•4 years ago
|
||
Set release status flags based on info from the regressing bug 1712930
Comment 8•4 years ago
|
||
bugherder |
Comment 9•4 years ago
|
||
(In reply to Petr Sumbera from comment #1)
Mike, please, is there any chance how to avoid these?
See bug 1712231
Updated•4 years ago
|
Description
•