Bug 1714022 - add missing ScopeExit header r=edgar

Fixes build failure on Tier3:
src/m-c/dom/xhr/XMLHttpRequestMainThread.cpp:3050:22: error: use of undeclared identifier 'MakeScopeExit'
 auto scopeExit = MakeScopeExit([&] {
regressed by bug 1712930

Differential Revision: https://phabricator.services.mozilla.com/D116560